# agentmem

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  __main__.py  cli.py  core.py  embeddings.py  glama.json  http_server.py  pyproject.toml  server-card.json  server.json  server.py
benchmarks/: __init__.py  __main__.py  bench.py  results.json
tests/: benchmark_optimizations.py  test_classify.py  test_compact_schema.py  test_core.py  test_http.py  test_quality.py  test_quantization.py
